Corrected an error in my buildspec.yml file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,5 +31,6 @@ artifacts:
     - target/nextwork-web-project.war
     - appspec.yml
     - scripts/**/*
+    - target/*.war
   discard-paths: no
 
